<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jFd-EP-ClF">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Skillbox_2_11" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="login" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="3FK-Rq-EwV">
                                <rect key="frame" x="20" y="397" width="374" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="Wws-4j-aBu"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="loginTextFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="Rsh-FE-dnV"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="mkl-Hb-lRG">
                                <rect key="frame" x="20" y="439" width="374" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="bXx-xB-N6l"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="passwordTextFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="GIL-eL-8wv"/>
                                </connections>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sww-a2-gyi">
                                <rect key="frame" x="20" y="218" width="374" height="47"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="47" id="twv-XQ-5hS"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Owf-UH-a28">
                                <rect key="frame" x="132" y="540" width="151" height="65"/>
                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="65" id="Upr-Za-7bO"/>
                                </constraints>
                                <state key="normal" title="Войти">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="logIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="44G-WC-t6l"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mkl-Hb-lRG" secondAttribute="trailing" constant="20" id="0Lm-R9-Zqm"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Owf-UH-a28" secondAttribute="bottom" priority="990" constant="301" id="4EK-gN-agg"/>
                            <constraint firstItem="3FK-Rq-EwV" firstAttribute="top" secondItem="Sww-a2-gyi" secondAttribute="bottom" priority="999" constant="132" id="84C-SL-wWx"/>
                            <constraint firstItem="Sww-a2-gyi" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" priority="999" constant="130" id="9Hi-fL-vF2"/>
                            <constraint firstItem="mkl-Hb-lRG" firstAttribute="top" secondItem="3FK-Rq-EwV" secondAttribute="bottom" priority="999" constant="8" symbolic="YES" id="TM6-V0-93v"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3FK-Rq-EwV" secondAttribute="trailing" constant="20" id="apU-VY-3qa"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Owf-UH-a28" secondAttribute="trailing" constant="131" id="dPD-gP-Awp"/>
                            <constraint firstItem="Sww-a2-gyi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="iQD-PY-93i"/>
                            <constraint firstItem="3FK-Rq-EwV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="jBg-6x-u5g"/>
                            <constraint firstItem="mkl-Hb-lRG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="lMV-aQ-S8A"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Sww-a2-gyi" secondAttribute="trailing" constant="20" id="qPZ-sK-Zy2"/>
                            <constraint firstItem="Owf-UH-a28" firstAttribute="top" secondItem="mkl-Hb-lRG" secondAttribute="bottom" priority="999" constant="67" id="quz-bV-lab"/>
                            <constraint firstItem="Owf-UH-a28" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="132" id="sBk-po-dyM"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="bjg-K4-WQ7"/>
                    <connections>
                        <outlet property="loginButton" destination="Owf-UH-a28" id="tut-yT-UPe"/>
                        <outlet property="loginTextField" destination="3FK-Rq-EwV" id="YXd-r8-EGx"/>
                        <outlet property="passwordTextField" destination="mkl-Hb-lRG" id="Twx-Gl-UR6"/>
                        <outlet property="statusLabel" destination="Sww-a2-gyi" id="zuB-xF-SsE"/>
                        <segue destination="9sj-5h-DOQ" kind="show" identifier="Yahoo" id="715-db-dra"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="977" y="78"/>
        </scene>
        <!--Congrats View Controller-->
        <scene sceneID="Ey9-T0-7Po">
            <objects>
                <viewController id="9sj-5h-DOQ" customClass="CongratsViewController" customModule="Skillbox_2_11" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="9RC-Gb-VbJ">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="LOGIN SUCCESS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sut-Yy-kzX">
                                <rect key="frame" x="145" y="438" width="131" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="UQe-rI-CpG"/>
                        <color key="backgroundColor" red="0.54382775697351993" green="1" blue="0.60039123692486851" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    </view>
                    <navigationItem key="navigationItem" id="0wF-0o-gQu"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="S1c-hd-1Mj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1883" y="78"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="SK0-XX-ndC">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jFd-EP-ClF" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xoV-Wc-hl3">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="dsg-mQ-TCo"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="eJS-k9-NOv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="18.840579710144929" y="78.348214285714278"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemGreenColor">
            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
